[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "pre-commit-jira-helper"
dynamic = ["version"]
authors = [
  { name="Infinite Lambda", email="dat@infinitelambda.com" },
]
description = "Pre-commit hook to prepend a Jira issue to a commit message"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/infinitelambda/pre-commit-jira-helper"
"Bug Tracker" = "https://github.com/infinitelambda/pre-commit-jira-helper/issues"

[project.scripts]
prepend-jira-issue = "pre_commit_jira_helper.cli.jira:main"
example-prefix-hook = "pre_commit_jira_helper.cli.example:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
]

[tool.pdm.version]
source = "scm"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "SIM",  # flake8-simplify
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

